--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,24 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ADK specific
+.adk/
+adk_sessions/
+adk_data/
+cache/
+sessions/
+logs/
+
+# Credentials
+*.json
+*.yaml
+*.yml
+credentials.json
+service_account.json
+
+# Local checkpoints or models
+*.ckpt
+*.pt
+*.bin
+*.sav
